bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value R
  if (lecture==R){
               ^BDR:7: error: not found: value char
  if (char getIndication()=L){
      ^BDR:7: error: not found: value L
  if (char getIndication()=L){
                           ^BDR:11: error: not found: value char
  if (char getIndication()=I){
      ^BDR:11: error: not found: value I
  if (char getIndication()=I){
                           ^BDR:16: error: not found: value char
  if (char getIndication()=A){
      ^BDR:16: error: not found: value A
  if (char getIndication()=A){
                           ^BDR:19: error: not found: value char
  if (char getIndication()=B){
      ^BDR:19: error: not found: value B
  if (char getIndication()=B){
                           ^BDR:23: error: not found: value char
  if (char getIndication()=C){
      ^BDR:23: error: not found: value C
  if (char getIndication()=C){
                           ^BDR:28: error: not found: value char
  if (char getIndication()=Z){
      ^BDR:28: error: not found: value Z
  if (char getIndication()=Z){
                           ^BDR:31: error: not found: value char
  if (char getIndication()=Y){
      ^BDR:31: error: not found: value Y
  if (char getIndication()=Y){
                           ^BDR:35: error: not found: value char
  if (char getIndication()=X){
      ^BDR:35: error: not found: value X
  if (char getIndication()=X){
                           ^